# Tri-CertFramework

./: .cursorules  .gitmodules  DEMO_GUIDE.md  DESIGN_RULE.md  PROTOTYPE.md  README.en.md  README.md  README_WEBAUTHN.md  YEARLY_ASSETS_BUILD.md  YEARLY_VK_INTEGRATION_GUIDE.md
.cursor/rules/: .cursorules
.github/: dependabot.yml
circuits/: commitment.circom  commitment_0000.zkey  commitment_final.zkey  commitment_new.zkey  generate-vkey-hash.js  package-lock.json  package.json  pot12_0001.ptau  vkey.json  vkey_hash.txt
dev-plan/: IMPROVEMENT_SUMMARY.md  PHASE0_DEVELOPMENT_PLAN.md  PHASE0_DEVELOPMENT_PLAN_v3.md  PHASE1_DEVELOPMENT_PLAN.md  PHASE1_DEVELOPMENT_PLAN_v3.md  PHASE2_DEVELOPMENT_PLAN.md  PHASE2_DEVELOPMENT_PLAN_v3.md  Phase0-Spec.md
documents/: FRD.md  FSD_JP.md  FSDv2.md  SRS_JP.md  SRSv2.md  TRD.md  TSD.md  TSD_JP.md  TSDv2.md  entitys.pu  roadmap.mmd  roadmap_guide.md  workflows.pu
documents/ExecutiveConsole/: BasicDesign_ExecutiveConsole.md  DetailedDesign_ExecutiveConsole.md  (+3 more)
executive-console/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
executive-console/src-tauri/: Cargo.toml  tauri.conf.json
executive-console/src-tauri/src/: lib.rs
prototype-docs/: FSD_Prototype.md  SRS_Prototype.md  TSD_Prototype.md
prover/: next.config.ts  package-lock.json  package.json
scholar-prover/: package-lock.json  package.json
scripts/: hash-pdf.ts  integration-test.ts  package-lock.json  package.json  pdf-attach.ts  test-hash-consistency.ts
verifier-ui/: next.config.ts  package-lock.json  package.json
(+47 files in other folders)
