[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Allow latest compatible 2.x to reduce transitive conflicts
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Scope Tauri to macOS and Windows only to avoid Linux GTK/GLib stack in the lockfile
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri = { version = "2", default-features = false, features = ["macos-private-api", "wry"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
